Actions
Bug #9476
closedloader: Don't leak memory when displaying help.
Start date:
2018-04-15
Due date:
% Done:
100%
Estimated time:
(Total: 0.00 h)
Difficulty:
Medium
Tags:
Gerrit CR:
Description
FreeBSD update: https://svnweb.freebsd.org/base?view=revision&revision=328289
Right now, we'll leak memory when we display a help topic because we don't free t, s, d that we've just used when breaking out of the loop.
NB: coverity just reported t, but s and d also leak.
CID: 1007776
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
git commit 0a4f1df16f07808514bc5838bc55709f93f9e93e
commit 0a4f1df16f07808514bc5838bc55709f93f9e93e Author: Toomas Soome <tsoome@me.com> Date: 2018-05-16T10:03:11.000Z 9476 loader: Don't leak memory when displaying help. 9480 loader: commands.c should only use snprintf 9481 loader: commands.c use __unused Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions