9476 loader: Don't leak memory when displaying help. 9480 loader: commands.c should only use snprintf 9481 loader: commands.c use __unused Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>